--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <div class="col-lg-4">
                     <h3>Implementação</h3>
                     <p>Desenvolvimento do código do software.</p>
-                    <p>No design, podemos criar wireframes e protótipos para visualizar a interface do
-                        usuário e a estrutura do sistema.</p>
+                    <p>Durante a implementação, escrevemos o código-fonte usando uma linguagem de
+                        programação como Java ou Python.</p>
 
                 </div>
                 <div class="col-lg-4">
@@ -104,8 +104,7 @@
                 <div class="col-lg-4">
                     <h3>Manutenção</h3>
                     <p>Atualização e correção do software.</p>
-                    <p>Durante a manutenção, aplicamos atualizações de segurança e corrigimos problemas
-                        relatados pelos usuários para garantir o bom funcionamento contínuo do sistema.</p>
+                    <p>Verificação se o software atende aos requisitos.</p>
 
                 </div>
             </div>
@@ -274,6 +273,8 @@
                     </div>
                 </div>
             </div>
+            <img style="height: 30%; width: 30%; margin-top: 5%; " src="frame.png " alt="qrCode">
+            
         </div>
     </section>
 
