--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     </div>
                 </div>
             </div>
-            <img style="height: 30%; width: 30%; margin-top: 5%; " src="https://qrco.de/bf9KIz " alt="qrCode">
+            <img style="height: 30%; width: 30%; margin-top: 5%; " src="frame.png" alt="qrCode">
             
         </div>
     </section>
